--- a/InternetSpeed/build.gradle
+++ b/InternetSpeed/build.gradle
@@ -10,7 +10,6 @@ android {
 
     defaultConfig {
         minSdk 21
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -22,11 +21,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 }
 
@@ -34,7 +33,7 @@ afterEvaluate {
     publishing {
         publications {
             replace(MavenPublication){
-                from components.release
+                from(components["release"])
                 groupId = 'uz.mobilDev.InternetSpeed'
                 artifactId = 'nternet-speed'
                 version = '1.0.0'
